--- a/index.html
+++ b/index.html
@@ -3,37 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stylish Portfolio Template</title>
+    <title>Your Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <div class="container">
-        <section id="home" class="page">
-            <h1>Welcome to My Portfolio</h1>
-            <p>This is where you showcase your skills and experiences.</p>
-        </section>
-        <section id="about" class="page">
-            <h2>About Me</h2>
-            <p>Write a brief description about yourself here.</p>
-        </section>
-        <section id="contact" class="page">
-            <h2>Contact Me</h2>
-            <form id="contact-form">
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="email" id="email" placeholder="Your Email" required>
-                <textarea id="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+        <h1>Welcome to Your Portfolio</h1>
+        <!-- Add creative content here -->
     </div>
     <script src="script.js"></script>
 </body>
