--- a/about.html
+++ b/about.html
@@ -17,10 +17,13 @@
         </nav>
     </header>
     <div class="container">
-        <img src="your-photo.jpg" alt="Your Photo">
+        <img src="IMG_3275.PNG" alt="ME">
         <div>
             <h1>About Me</h1>
-            <p>Your biography paragraphs go here.</p>
+            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. 
+                The passage is attributed to an unknown typesetter in the 15th century who is thought to have
+                scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.
+            </p>
         </div>
     </div>
 </body>
